--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rmcommons/common",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -11,7 +11,7 @@
     "clean": "del-cli ./build/*",
     "build": "npm run clean && tsc",
     "tsc": "tsc",
-    "publish": "git add . && git commit -m \"Update Files\" && npm version patch && npm run build && npm publish"
+    "pub": "git add . && git commit -m \"Update Files\" && npm version patch && npm run build && npm publish"
   },
   "author": "",
   "license": "ISC",
