--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rmcommons/ticketapp",
+  "name": "@rmcommons/blogapp",
   "version": "1.0.17",
   "description": "",
   "main": "./build/index.js",
